async respawn dimension getting